# migration-accelerator

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml
docker/: docker-compose.yml
docs/: regression_test_catalog.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: test-pipeline.mjs
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ChatDock.tsx  CommandBar.tsx  DataFlowCanvas.tsx  LiveFeed.tsx  MetricsRail.tsx  MigrationRouteBar.tsx  SlidePanel.tsx  WorkbenchPanels.tsx
frontend/src/hooks/: usePipeline.ts
scripts/: clear_metadata.py  dev.ps1  generate_synthetic_data.py  init_teradata_source.py  run_recon_all.py  test_teradata_connection.py
src/accelarator/: llm.py
src/accelerator/: __init__.py
src/agents/: __init__.py  __main__.py  chat_service.py  graph.py  migration_profile.py  nodes.py  registry.py  runner.py  state.py  streaming.py  ui_api.py  ui_services.py
src/api/: __init__.py  __main__.py  main.py  schemas.py
src/documentation/: __init__.py  __main__.py  generator.py  lineage.py
src/input_schema/: column_mappings.yaml  customers.sql  ecommerce.sql  orders.sql  products.sql
src/reconciliation/: __init__.py  check_gcp_connection.py  compare_results.py  migration_recon.py  recon_executor.py  recon_report.py  result_exporter.py  schema_provisioner.py
src/source_files_for_migration/: customer_order_lifetime.sql  customer_product_spend.sql  emp_rank.sql  employee.sql  inactive_high_value_customers.sql  product_revenue_contribution.sql  regional_monthly_sales.sql  signup_cohort_retention.sql
src/test_generator/: __init__.py  __main__.py  catalog.py  registry.py  report.py  runner.py  suite.py  test_metadata.py
(+21 files in other folders)
