[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "migration-accelerator"
version = "0.1.0"
description = "AI-powered SQL migration with agentic flows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.105.2",
    "duckdb>=1.5.3",
    "faker>=40.21.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sdv>=1.37.0",
    "sqlglot>=30.8.0",
    "streamlit>=1.58.0",
    "teradatasql>=20.0.0",
    "google-cloud-bigquery>=3.30.0",
    "db-dtypes>=1.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["accelarator*", "reconciliation*", "test_generator*", "documentation*"]